# arkplatte

./: .gitignore  LICENSE  README.md
R/: DESCRIPTION  LICENSE  NAMESPACE  README.md
R/R/: data.R  palette.R  scales.R
R/inst/extdata/: curated_palettes.csv  manual_palettes.csv  palette_manifest.json  palettes.csv
R/tests/: testthat.R
R/tests/testthat/: test-palettes.R
docs/: arkplatte_promotion_copy.md  arkplatte_wechat_humanized.md  common_figures_palette_log.txt  index.html  plot1cell_palette_log.txt  umap_palette_log.txt
docs/scripts/: generate_operator_palette_cards.py  python_common_figures.py  python_omicverse_plot1cell_lung_kidney.py  python_single_cell_umap.py  r_common_figures.R  r_plot1cell_lung_kidney.R
python/: LICENSE  README.md  pyproject.toml
python/arknights_palette/: __init__.py  data.py  palette.py
python/arknights_palette/data/: operators.csv
python/tests/: test_palette.py
